--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,9 @@ jobs:
     - uses: actions/setup-ruby@v1
       with:
         ruby-version: 2.6.x
-    - uses: workarea-commerce/ci/test@v1
-      with:
-        command: bin/rails test test/**/*_test.rb
+    - name: Install Dependencies
+      run: |
+        sudo apt-get install -y libsqlite3-dev
+        bundle install
+    - name: Run Tests
+      run: bin/rails test
